// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`genRoutesConfig website with no docs/pages 1`] = `
"import React from 'react';
import Docs from '@theme/Docs';
import NotFound from '@theme/NotFound';


const routes = [,,
  {
    path: '*',
    component: NotFound
  }
];
export default routes;
"
`;

exports[`genRoutesConfig website with only docs 1`] = `
"import React from 'react';
import Docs from '@theme/Docs';
import NotFound from '@theme/NotFound';

import MDHello from '@docs/hello.md';
import MDFooBar from '@docs/foo/bar.md';
import MDFooBaz from '@docs/foo/baz.md';
const routes = [
  {
    path: \\"/hello\\",
    exact: true,
    component: (props) => (
      <Docs {...props}>
        <MDHello />
      </Docs>
    )
  },
  {
    path: \\"/foo/bar\\",
    exact: true,
    component: (props) => (
      <Docs {...props}>
        <MDFooBar />
      </Docs>
    )
  },
  {
    path: \\"/foo/baz\\",
    exact: true,
    component: (props) => (
      <Docs {...props}>
        <MDFooBaz />
      </Docs>
    )
  },,
  {
    path: '*',
    component: NotFound
  }
];
export default routes;
"
`;

exports[`genRoutesConfig website with only pages 1`] = `
"import React from 'react';
import Docs from '@theme/Docs';
import NotFound from '@theme/NotFound';
import JSFoo from '@pages/foo.js';
import JSIndex from '@pages/index.js';
import JSBarBaz from '@pages/bar/baz.js';
import JSFooIndex from '@pages/foo/index.js';

const routes = [,
  {
    path: \\"/foo\\",
    exact: true,
    component: JSFoo
  },
  {
    path: \\"/\\",
    exact: true,
    component: JSIndex
  },
  {
    path: \\"/bar/baz\\",
    exact: true,
    component: JSBarBaz
  },
  {
    path: \\"/foo/\\",
    exact: true,
    component: JSFooIndex
  },
  {
    path: '*',
    component: NotFound
  }
];
export default routes;
"
`;

exports[`genRoutesConfig website with pages and docs 1`] = `
"import React from 'react';
import Docs from '@theme/Docs';
import NotFound from '@theme/NotFound';
import JSFoo from '@pages/foo.js';
import JSIndex from '@pages/index.js';
import JSBarBaz from '@pages/bar/baz.js';
import JSFooIndex from '@pages/foo/index.js';
import MDHello from '@docs/hello.md';
import MDFooBaz from '@docs/foo/baz.md';
import MDFooBar from '@docs/foo/bar.md';
const routes = [
  {
    path: \\"/hello\\",
    exact: true,
    component: (props) => (
      <Docs {...props}>
        <MDHello />
      </Docs>
    )
  },
  {
    path: \\"/foo/baz\\",
    exact: true,
    component: (props) => (
      <Docs {...props}>
        <MDFooBaz />
      </Docs>
    )
  },
  {
    path: \\"/foo/bar\\",
    exact: true,
    component: (props) => (
      <Docs {...props}>
        <MDFooBar />
      </Docs>
    )
  },
  {
    path: \\"/foo\\",
    exact: true,
    component: JSFoo
  },
  {
    path: \\"/\\",
    exact: true,
    component: JSIndex
  },
  {
    path: \\"/bar/baz\\",
    exact: true,
    component: JSBarBaz
  },
  {
    path: \\"/foo/\\",
    exact: true,
    component: JSFooIndex
  },
  {
    path: '*',
    component: NotFound
  }
];
export default routes;
"
`;
